--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="recipes/lasagna.html">Lasagna</a></li>
       <li><a href="recipes/chili.html">Chili</a></li>
+      <li><a href="recipes/tortilla_soup.html">Chicken Tortilla Soup</a></li>
     </ul>
   </body>
 </html>
