Added ingredients and steps headers to recipes

--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -10,6 +10,7 @@
     <img src="../images/chili.webp" alt="Chili" height="400" width="600" />
     <h2>Description</h2>
     <p>An easy to make homeade chili.</p>
+    <h2>Ingredients</h2>
     <ul>
       <li>1 pound ground beef</li>
       <li>1 onion, chopped</li>
@@ -21,6 +22,7 @@
       <li>1 pinch garlic powder</li>
       <li>salt and pepper to taste</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
       <li>
         Place ground beef and onion in a large saucepan over medium heat; cook
