--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,6 +13,7 @@
       A traditional homemade lasagna with made-from-scratch tomato sauce and a
       cheesy filling.
     </p>
+    <h2>Ingredients</h2>
     <ul>
       <li>1/2 pound ground pork</li>
       <li>1/2 pound lean ground beef</li>
@@ -33,6 +34,7 @@
       <li>¼ teaspoon ground black pepper</li>
       <li>1 (16 ounce) package shredded mozzarella cheese</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
       <li>
         Combine pork and ground beef in a large, deep skillet over medium-high
