--- a/recipes/tortilla_soup.html
+++ b/recipes/tortilla_soup.html
@@ -18,6 +18,7 @@
       A quick to make chicken tortilla soup with shredded chicken, black beans
       and corn.
     </p>
+    <h2>Ingredients</h2>
     <ul>
       <li>1 tablespoon olive oil</li>
       <li>1 medium onion, chopped</li>
@@ -41,6 +42,7 @@
       <li>1/2 cup shredded Monterey Jack cheese, or to taste</li>
       <li>2 tablespoons chopped green onions, or to taste</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
       <li>Gather all ingredients.</li>
       <li>
