--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../styles.css">
     <title>Chili</title>
   </head>
 
@@ -11,7 +12,7 @@
     <h2>Description</h2>
     <p>An easy to make homeade chili.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
       <li>1 pound ground beef</li>
       <li>1 onion, chopped</li>
       <li>1 (15 ounce) can tomato sauce</li>
