--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../styles.css">
     <title>Lasagna</title>
   </head>
 
@@ -14,7 +15,7 @@
       cheesy filling.
     </p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
       <li>1/2 pound ground pork</li>
       <li>1/2 pound lean ground beef</li>
       <li>1/2 cup minced onion</li>
