--- a/recipes/tortilla_soup.html
+++ b/recipes/tortilla_soup.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../styles.css">
     <title>Chicken Tortilla Soup</title>
   </head>
 
@@ -19,7 +20,7 @@
       and corn.
     </p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
       <li>1 tablespoon olive oil</li>
       <li>1 medium onion, chopped</li>
       <li>3 cloves garlic, minced</li>
